cambio de contraseña mysql

--- a/controlDeAccesos/src/main/resources/application.properties
+++ b/controlDeAccesos/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/accesos?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-usuario=root
-clave=root
+url=jdbc:mysql://accesos:3306/accesos?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+usuario=curso
+clave=Cursocurso1
 dialect=org.hibernate.dialect.MySQLDialect
 show_sql=true
 format_sql=true
